Fix extra field panel disappreading on narrow screens.

--- a/public/style.css
+++ b/public/style.css
@@ -320,6 +320,11 @@ div.invisible {
     text-align: center;
 }
 
+.fixed-right {
+    position: fixed;
+    right: 0;
+}
+
 .absolute-top-right {
     position: absolute;
     top: 2px;
